plugins {
    id 'org.springframework.boot' version '2.5.3'
    id 'io.spring.dependency-management' version '1.0.12.RELEASE'
    id 'java'
}

group = 'com.triget.application'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

repositories {
    mavenCentral()
}

dependencies {
    implementation ('org.springframework.boot:spring-boot-starter-web')
    implementation('org.springframework.boot:spring-boot-starter-data-mongodb')
    implementation ('org.springframework.boot:spring-boot-starter-data-mongodb-reactive')
    implementation(group: 'io.springfox', name: 'springfox-boot-starter', version: '3.0.0')
    implementation ('org.springframework.boot:spring-boot-starter-validation')
    implementation ('com.google.code.findbugs:jsr305:3.0.2')
    developmentOnly ('org.springframework.boot:spring-boot-devtools')
    compileOnly ('org.projectlombok:lombok')
    compileOnly ('org.springframework.security:spring-security-web:5.7.2')
    compileOnly ('org.springframework.security:spring-security-config:5.7.2')
    implementation('org.springframework.boot:spring-boot-starter-oauth2-client')
    implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
    implementation 'jakarta.xml.bind:jakarta.xml.bind-api:2.3.2'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.2'
    annotationProcessor ('org.projectlombok:lombok')
    testImplementation ('org.springframework.boot:spring-boot-starter-test')
    testImplementation(platform("org.junit:junit-bom:5.8.2"))
    testRuntimeOnly("org.junit.platform:junit-platform-launcher") {
        because("Only needed to run tests in a version of IntelliJ IDEA that bundles older versions")
    }
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine")
    testRuntimeOnly("org.junit.vintage:junit-vintage-engine")
    testImplementation 'io.projectreactor:reactor-test'
}

tasks.named('test') {
    useJUnitPlatform()
}
